--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,21 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
-h1 {
+/* 
+.app h1 {
   @apply text-6xl font-bold my-8;
+} */
+
+.app h2 {
+  @apply text-3xl font-bold my-6;
 }
 
-h2 {
-  @apply text-5xl my-6;
+.app h3 {
+  @apply text-xl my-6;
 }
 
-h3 {
-  @apply text-2xl my-6;
-}
-
-p {
-  @apply text-xl my-4;
+.app p {
+  @apply text-base my-4;
 }
 
 /* purgecss start ignore */
@@ -26,7 +26,7 @@ p {
 }
 /* Headers */
 .markdown h1 {
-  @apply text-5xl my-6 font-bold
+  @apply text-4xl my-6 font-bold
 }
 .markdown h2 {
   @apply text-3xl my-6 font-bold;
@@ -48,7 +48,7 @@ p {
 }
 /* Paragraph */
 .markdown p {
-  @apply text-xl mb-4;
+  @apply text-base mb-4;
 }
 /* Lists */
 .markdown ul,
@@ -65,6 +65,9 @@ p {
 }
 .markdown ul {
   @apply list-disc;
+}
+.markdown li {
+  @apply text-base;
 }
 /* Blockquotes */
 .markdown blockquote {
@@ -91,3 +94,5 @@ p {
   color: blue;
 }
 /* purgecss end ignore */
+
+@tailwind utilities;
