--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
 
 .app p {
   @apply text-base my-4;
+  color: #454545;
 }
 
 .leigh-wants-background {
@@ -54,6 +55,7 @@
 /* Links */
 .markdown a {
   @apply;
+  color: rgb(51, 51, 249);
 }
 .markdown a:hover {
   @apply underline;
@@ -61,6 +63,7 @@
 /* Paragraph */
 .markdown p {
   @apply text-base mb-4;
+  color: #454545;
 }
 /* Lists */
 .markdown ul,
@@ -99,6 +102,12 @@
 
 .markdown img {
   @apply w-full;
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 10px 10px -5px rgba(0,0,0,.04)!important;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 .markdown img + p {
