pepsi commercial and day in life video

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,12 @@
   margin-top: -50px;
 }
 
+.video-container iframe {
+  display: block;
+  width: 80%;
+  height: 300px;
+}
+
 /* purgecss start ignore */
 /* Markdown Styles */
 /* Global */
