--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,12 @@
   color: #454545;
 }
 
+.app p span {
+  background-color: #ffffff;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 .leigh-wants-background {
   background: url("https://user-images.githubusercontent.com/13127625/70859550-6d0cbd80-1eca-11ea-83f9-e5aa94b9e76f.jpg");
 }
@@ -49,6 +55,102 @@
   display: block;
   width: 80%;
   height: 300px;
+}
+
+.landing {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+
+.landing-content {
+  z-index: 3;
+}
+
+@media screen and (min-width: 1150px) {
+  .landing::before {
+    /* border-radius: 83% 55% 43% 40% / 40% 70% 75% 76%; */
+    background: #ffffff;
+    box-shadow: 0 0 0 1pt #2e2e2e;
+    content: "";
+    width: 45vmax;
+    height: 35vmax;
+    position: absolute;
+    /* background: rgba(255, 255, 255, 0.07); */
+    left: 12vmin;
+    top: 35vmin;
+    animation: morph-smaller 15s linear infinite alternate;
+    z-index: 2;
+    will-change: border-radius, transform;
+    transform-origin: 55% 55%;
+    pointer-events: none;
+  }
+  
+  .landing::after {
+    /* border-radius: 83% 55% 43% 40% / 40% 70% 75% 76%; */
+    background: #ffffff;
+    box-shadow: 0 0 0 1pt #2e2e2e;
+    content: "";
+    width: 70vmax;
+    height: 55vmax;
+    position: absolute;
+    /* background: rgba(255, 255, 255, 0.07); */
+    left: -20vmin;
+    top: -20vmin;
+    animation: morph 10s linear infinite alternate;
+    z-index: 1;
+    will-change: border-radius, transform;
+    transform-origin: 55% 55%;
+    pointer-events: none;
+  }
+}
+
+@media screen and (max-width: 1150px) and (min-width: 1000px) {
+  .landing::before {
+    /* border-radius: 83% 55% 43% 40% / 40% 70% 75% 76%; */
+    background: #ffffff;
+    box-shadow: 0 0 0 1pt #2e2e2e;
+    content: "";
+    width: 60vmax;
+    height: 45vmax;
+    position: absolute;
+    /* background: rgba(255, 255, 255, 0.07); */
+    left: 15vmin;
+    top: 38vmin;
+    animation: morph-smaller 15s linear infinite alternate;
+    z-index: 2;
+    will-change: border-radius, transform;
+    transform-origin: 55% 55%;
+    pointer-events: none;
+  }
+  
+  .landing::after {
+    /* border-radius: 83% 55% 43% 40% / 40% 70% 75% 76%; */
+    background: #ffffff;
+    box-shadow: 0 0 0 1pt #2e2e2e;
+    content: "";
+    width: 110vmax;
+    height: 75vmax;
+    position: absolute;
+    /* background: rgba(255, 255, 255, 0.07); */
+    left: -20vmin;
+    top: -20vmin;
+    animation: morph 10s linear infinite alternate;
+    z-index: 1;
+    will-change: border-radius, transform;
+    transform-origin: 55% 55%;
+    pointer-events: none;
+  }
+}
+
+@keyframes morph {
+  0% {border-radius: 40% 60% 60% 40% / 70% 30% 70% 30%;}
+  100% {border-radius: 40% 60%;}
+}
+
+@keyframes morph-smaller {
+  0% {border-radius: 63% 37% 44% 56% / 23% 53% 47% 77%; }
+  100% {border-radius: 69% 31% 25% 75% / 71% 22% 78% 29% ;}
 }
 
 /* purgecss start ignore */
