--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,10 @@
   color: #454545;
 }
 
+.app i {
+  background: #ffffff;
+}
+
 .app p span {
   background-color: #ffffff;
   padding-top: 5px;
@@ -65,6 +69,10 @@
 
 .landing-content {
   z-index: 3;
+}
+
+.bg-white {
+  background: #ffffff;
 }
 
 @media screen and (min-width: 1150px) {
