--- a/src/app.css
+++ b/src/app.css
@@ -32,11 +32,14 @@ html {
     rgba(0, 0, 30, 0.18) 20.59%,
     rgba(255, 255, 255, 0) 70.63%
   );
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   border-radius: 6px;
   backdrop-filter: blur(20px);
   left: 0;
   position: absolute;
+
+  font-family: "Berkeley Mono Regular", monospace;
 }
 
 h1,
@@ -46,7 +49,7 @@ h3 {
 }
 
 h1 {
-  font-size: 5.5vw;
+  font-size: 5vw;
 }
 
 h3 {
