--- a/src/app.css
+++ b/src/app.css
@@ -119,7 +119,7 @@ i {
   max-width: 90vw;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 18px;
 }
 
 .line {
@@ -152,4 +152,8 @@ a {
   justify-content: center;
   color: lightgray;
   font-size: 12px;
+}
+
+.name {
+  margin-top: 4px;
 }
